--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "animate.css": "^3.5.2"
+    "animate.css": "^3.5.2",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
