--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "animate.css": "^3.5.2",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "sweetalert": "^1.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
